archive/deploy/overlays/web/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - web--branchname--projectname.ltc.bcit.ca
      secretName: star-ltc-bcit-ca
  rules:
    - host: web--branchname--projectname.ltc.bcit.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
